# statistical-playground

./: .gitignore  README.md  main.py  pyproject.toml
docs/: contents.md
notebooks/: 1_tailed_t.ipynb  anova.ipynb  chi_squared.ipynb  q_q_plots.ipynb  t_tests.ipynb
