[project]
name = "statistical-playground"
version = "0.1.0"
description = "Examples of statistical hypothesis testing in Python, including t-tests and ANOVA."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
]
